# vivien

./: .env.example  .gitignore  Dockerfile  JD-Maitre-d-hotel.html  JD-Waiter-fr.html  JD-Waiter-lv.html  JD-Waiter-ru.html  JD-Waiter.html  STRIPE-GIFT-CARD.md  alembic.ini  coming-soon-fr.html  coming-soon-lv.html  coming-soon-ru.html  docker-compose.yml  fragment.html  index-fr.html  index-lv.html  index-ru copy.html  index-ru.html  index-temp.html  index.html  index1.html  index_old.html  menu_en_corrected.html  menu_fr.html  menu_lv.html  menu_ru_block.html  menu_ru_filters.html  new-loyal-registration-en.html  new-loyal-registration-fr.html  new-loyal-registration-lv.html  new-loyal-registration-ru.html  new-loyal.html  pyproject.toml  review.html  review_en.html  review_fr.html  review_lv.html  review_ru.html  robots.txt  (+2 more)
alembic/: env.py
forms/: book-a-table.php  contact.php  giftcard.php  newsletter.php  register-new-loyal.php  review.php
gift-card/: giftcard-en.html  giftcard-fr.html  giftcard-lv.html  giftcard-ru.html  giftcard-thanks-en.html  giftcard-thanks-fr.html
giftcard_service/: __init__.py  cli.py  config.py  db.py  jobs.py  main.py  models.py  provider_smoke.py  providers.py  schemas.py  worker.py  workflow.py
google-ads/: vivien_apply_approved_changes_2026_06_26.gs  vivien_search_terms_export_2026_06_26.gs
php-api/: .env.example  .gitignore  README.md  composer.json  phpunit.xml
scripts/: dev-stack.ps1
site-v1/: JD-Maitre-d-hotel.html  JD-Waiter-ru.html  coming-soon-lv.html  coming-soon-ru.html  index-ru.html  index.html  index_old.html  (+8 more)
(+112 files in other folders)
